--- a/OEDUY/HComponents/BBContent.css
+++ b/OEDUY/HComponents/BBContent.css
@@ -1,3 +1,10 @@
+html, body {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
 .BottomBar {
     bottom: 0;
     width: 100%;
