--- a/OEDUY/HComponents/BBContent.css
+++ b/OEDUY/HComponents/BBContent.css
@@ -8,6 +8,7 @@ html, body {
 .BottomBar {
     bottom: 0;
     width: 100%;
+    height: 100%;
     overflow: hidden;
     background-color: rgb(18,18,18);
     text-align: center;
