--- a/StyleSheets/About.css
+++ b/StyleSheets/About.css
@@ -14,6 +14,7 @@
 .sepRedirector h1{
     color: rgb(255, 255, 255);
     text-shadow: 5px 1px 5px rgb(0, 0, 0);
+    top: 0;
 }
 
 .sepRedirector p{
