--- a/StyleSheets/Contact.css
+++ b/StyleSheets/Contact.css
@@ -18,6 +18,7 @@ body{
 .sepRedirector h1{
     color: rgb(255, 255, 255);
     text-shadow: 5px 1px 5px rgb(0, 0, 0);
+    top: 0;
 }
 
 .sepRedirector input{
