--- a/StyleSheets/Projects.css
+++ b/StyleSheets/Projects.css
@@ -50,7 +50,7 @@ h2{
     width: 145px;
     height: 62px;
     border-radius: 10px;
-    background: linear-gradient(to right, #000000ba, #000000cc), url(https://picsum.photos/1280/853/?random=1) no-repeat top center;
+    background: linear-gradient(to right, #000000ba, #000000cc) no-repeat top center;
     transition: .25s;
     opacity: 0.2;
 }
