--- a/StyleSheets/Projects.css
+++ b/StyleSheets/Projects.css
@@ -31,6 +31,10 @@ h2{
     font-size: xx-large;
 }
 
+a {
+    text-decoration: none;
+}
+
 .scImg{
     width: 250px;
     height: 300px;
@@ -39,22 +43,19 @@ h2{
     border-width: thick;
 }
 
-.btnGH{
-    outline: 0;
-}
-
-.btnGH img{
-    margin: 12px;
+.redirector {
     content: url(../Images/GitHub_Logo.png);
+    outline: 0;
+    margin: 12px;
     background-size: cover;
     width: 145px;
     height: 62px;
     border-radius: 10px;
-    background: linear-gradient(to right, #000000ba, ##2b2b2bcc);
+    background: linear-gradient(to right, #000000ba, #2b2b2bcc);
     transition: .25s;
     opacity: 0.2;
 }
 
-.btnGH img:hover,:focus,:active{
+.redirector:hover,:focus,:active{
     opacity: 1;
 }
